--- a/frontend/pixel-ai-frontend/src/app/page.module.css
+++ b/frontend/pixel-ai-frontend/src/app/page.module.css
@@ -24,6 +24,7 @@
 }
 
 .main {
+    width: 30%;
     display: flex;
     flex-direction: column;
     gap: 32px;
@@ -31,6 +32,10 @@
 
 .title {
     font-size: 2.4rem;
+}
+
+.form {
+    width: 100%;
 }
 
 .canvasInput label {
@@ -51,6 +56,10 @@
 .prompt {
     padding: 1rem;
     font-family: var(--font-tiny5);
+}
+
+.canvasInput input {
+    width: 6rem;
 }
 
 
